--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .profile-pic {
     border-radius: 50%;
 }
@@ -7,10 +12,27 @@ i {
 }
 .header {
     height: 350px;
+    color: white;
 }
 .footer {
     height: 200px;
 }
 .arrow {
     width: 30%;
+}
+.header-background-waves {
+    position: absolute;
+    top: 100px;
+    height: 400px;
+    width: 100vw;
+    z-index: -1;
+    display: inline-block;
+}
+.header-background {
+    position: absolute;
+    top: 0;
+    height: 450px;
+    width: 100%;
+    background: linear-gradient(30deg, #301b3fff 5%, #151515 95%);
+    z-index: -1;
 }
